--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "final-form-vanilla-js",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "Pizza form",
+  "version": "1.0.0",
+  "description": "Pizza form",
+  "keywords": [
+    "state management",
+    "react-final-form",
+    "form",
+    "final-form",
+    "react"
+  ],
+  "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "final-form": "^4.20.7",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-final-form": "^6.5.9",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.6"
   },
   "browserslist": {
     "production": [
